fix font size for post on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,10 @@ $mobileBreakpoint: 0px 768px;
 
 .engagehub {
   .engagehub-tile--text {
-    @media screen and (max-width: 550px) {
+    @media screen and (max-width: 480px) {
+      font-size: 8px;
+    }
+    @media screen and (max-width: 550px) and (min-width: 481px) {
       font-size: 10px;
     }
     @media screen and (max-width: 750px) and (min-width: 660px) {
